<resources>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Select a color</string>
    <string name="press_color_to_apply">Press on color to apply</string>

    <!-- Text -->
    <string name="app_name">Letter Drag</string>
    <string name="app_description">Letter Drag - A fun game about shuffling characters.\n\n<b>How to play:</b>\nTouch a character and drag it to its correct position.\nSwipe up to get a new word.\nDouble tap to get options</string>
    <string name="app_attribution">Letter Drag &#169; 2012 Ubergesundheit\n\nThis app uses the following Fonts licenced under the SIL Open Font License:\nRaleway by Matt McInerney\nJunction by Caroline Hadilaksono\nProciono by Barry Schwartz\nSniglet by Haley Fiege\n\nThis app uses the following classes:\n<b>ColorPickerDialog.java, ColorPickerPanelView.java, ColorPickerView.java from Daniel Nilsson</b>\nCopyright &#169; 2010 Daniel Nilsson\n\nLicensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\n     http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an \"AS IS\" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.\n\n<b>ColorPickerPreference.java from Sergey Margaritov</b>\nCopyright &#169; 2011 Sergey Margaritov\n\nLicensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\n     http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an \"AS IS\" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.\n\n<b>FontManager.java, FontPreference.java from George Yunaev</b>\nCopyright &#169; 2011&#8122;2012 George Yunaev\n\nLicensed under the Apache License, Version 2.0 (the \"License\");\nyou may not use this file except in compliance with the License.</string>
    <string name="str_context_new_word">New word</string>
    <string name="str_context_settings">Settings</string>
    <string name="str_settings_font_color">Change font color</string>
    <string name="str_settings_bg_color">Change background color</string>
    <string name="str_settings_font">Change font</string>
    <string name="str_settings_apperance">Appearance</string>
    <string name="str_settings_about">About</string>
    <string name="str_settings_default_values">Reset appearance</string>
    <string name="str_settings_default_values_summary">Restore appearance settings to default values</string>
    <string name="str_settings_draw_indicator">Draw touch indicator</string>
    <string name="str_settings_draw_indicator_summary_on">A touch indicator will be drawn</string>
    <string name="str_dialog_new_game_title">Start new game?</string>
    <string name="str_dialog_new_game_body">All progress will be lost!</string>
    <string name="str_dialog_reset_appearance_title">Reset appearance?</string>
    <string name="str_dialog_reset_appearance_body">This will reset all colors and the font!</string>
    <string name="str_main_menu_start_game">NewGame</string>
    <string name="str_main_menu_continue_game">ContinueGame</string>
    <string name="str_main_menu_endless_game">EndlessGame</string>
    <string name="str_main_menu_settings">Settings</string>
    <string name="str_main_menu_help">HowToPlay</string>
    <string name="str_game_level_up">Level up!</string>
    <string name="str_description_correct">Correct!</string>
    <string name="str_dialog_game_won_title">Congratulations!</string>
    <string name="str_dialog_game_won_body">You have beaten the game!</string>
    <string name="str_howto_title">How to play</string>
    <string name="str_howto_general_description">In Letter Drag each word is scrambled. Your task is to unwind the words by dragging the characters to their correct positions.\n\n<b>While playing, double tap to enter settings or get a new word if you are stuck.</b></string>
    <string name="str_howto_first_description">The letters in this word are not in the right order. You can drag each letter to its correct position.</string>
    <string name="str_howto_second_description">After you dragged the \"L\" into its correct position, the last \"o\" and \"g\" are wrong. Just change their position.</string>
    <string name="str_howto_third_description">The word is now correct! A new word will appear.</string>

</resources>