<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AboutActivity" >

    <Button
        android:id="@+id/about_accept"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@android:string/ok" >
    </Button>

    <ScrollView
        android:id="@+id/aboutscroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/about_accept" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/about_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/app_name"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/about_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/app_description" />

            <TextView
                android:id="@+id/about_attribution"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_attribution" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>