<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity" >

    <Button
        android:id="@+id/howto_accept"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@android:string/ok" >
    </Button>

    <ScrollView
        android:id="@+id/aboutscroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/howto_accept" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/howto_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/str_howto_title"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/howto_general_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_howto_general_description" />

            <TextView
                android:id="@+id/howto_first_description"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/str_howto_first_description" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/first" >
            </ImageView>

            <TextView
                android:id="@+id/howto_second_description"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/str_howto_second_description" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/second" >
            </ImageView>
			<TextView
                android:id="@+id/howto_third_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@android:style/TextAppearance.Medium"
                android:text="@string/str_howto_third_description" />
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/third" >
            </ImageView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>